// BaseConfig.hpp
#ifndef BASECONFIG_HPP
#define BASECONFIG_HPP

class BaseConfig
{
};
#endif